adds nav links & signin functionality

--- a/public/styles/base.scss
+++ b/public/styles/base.scss
@@ -11,10 +11,15 @@ body {
 
 a {
   text-decoration: none;
+  color: #646262;
 }
 
 * {
   box-sizing: border-box;
+}
+
+ul{
+  margin: 0rem !important;
 }
 
 .week-schedule.page{ 
