--- a/public/styles/components/_dayScheduleCard.scss
+++ b/public/styles/components/_dayScheduleCard.scss
@@ -1,3 +1,10 @@
+.day-schedule-cards{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+
 .day-schedule {
     background-color: #FFFFFF;
     box-shadow: -1px 0px 5px rgba(0, 0, 0, 0.25);
@@ -5,6 +12,7 @@
     padding: 1rem;
     width: fit-content;
     width: 400px;
+    
     img {
         width: 60px;
     }
