--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -10,15 +10,26 @@ body {
 
 a {
   text-decoration: none;
+  color: #646262;
 }
 
 * {
   box-sizing: border-box;
 }
 
+ul {
+  margin: 0rem !important;
+}
+
 .week-schedule.page .day-schedule-cards {
   display: flex;
   justify-content: space-evenly;
+}
+
+.day-schedule-cards {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .day-schedule {
@@ -42,6 +53,29 @@ a {
   font-weight: 400;
   font-size: 30px;
   margin: 1rem 0rem;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  align-items: center;
+  padding: 2rem 5rem;
+  box-shadow: -1px 5px 5px rgba(0, 0, 0, 0.04);
+  border-radius: 0px;
+  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
+  margin-bottom: 2rem;
+}
+header nav ul {
+  display: flex;
+  align-items: center;
+}
+header nav ul a {
+  font-size: 20px;
+}
+header nav ul a:hover {
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=style.css.map */
