--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,3 +1,8 @@
 @import 'base.scss';
+
 @import 'components/dayScheduleCard.scss';
 @import 'components/header.scss';
+@import 'components/adminLayout.scss';
+@import 'components/adminClassesLayout.scss';
+
+@import './media.scss';
