--- a/public/styles/components/_dayScheduleCard.scss
+++ b/public/styles/components/_dayScheduleCard.scss
@@ -1,6 +1,6 @@
-.day-schedule-cards{
+.day-schedule-cards {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
@@ -8,22 +8,24 @@
 .day-schedule {
     background-color: #FFFFFF;
     box-shadow: -1px 0px 5px rgba(0, 0, 0, 0.25);
-    border-radius: 29px;
+    border-radius: 15px;
     padding: 1rem;
     width: fit-content;
     width: 400px;
-    
+    margin: 1rem 0rem;
+
     img {
         width: 60px;
     }
 
-    .head{
+    .head {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-    h3{
+
+    h3 {
         font-weight: 400;
         font-size: 30px;
         margin: 1rem 0rem;
