added class cards

--- a/public/styles/components/_adminClassesLayout.scss
+++ b/public/styles/components/_adminClassesLayout.scss
@@ -28,6 +28,13 @@
             flex-wrap: wrap;
         }
     }
+
+    .class-body{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
 }
 
 .admin-clients {
