--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,8 +1,10 @@
 @import 'base.scss';
+@import 'variables.scss';
 
 @import 'components/dayScheduleCard.scss';
 @import 'components/header.scss';
 @import 'components/adminLayout.scss';
 @import 'components/adminClassesLayout.scss';
+@import 'components/adminClassCard.scss';
 
 @import './media.scss';
