--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -4,5 +4,6 @@
 @import 'components/header.scss';
 @import 'components/adminLayout.scss';
 @import 'components/adminClassesLayout.scss';
+@import 'components/weekSchedulePage.scss';
 
 @import './media.scss';
