--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -142,6 +142,8 @@ header nav .fa-bars {
   display: none;
 }
 header nav ul {
+  width: 1500px;
+  justify-content: space-between;
   display: flex;
   align-items: center;
 }
@@ -230,7 +232,7 @@ header .navItems {
 }
 header .navItem {
   display: inline-block;
-  margin-right: 3.5rem;
+  /*  margin-right: 3.5rem; */
 }
 
 .admin-layout {
