updates to admin classes and clients options

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -7,5 +7,6 @@
 @import 'components/adminClassesLayout.scss';
 @import 'components/weekSchedulePage.scss';
 @import 'components/adminClassCard.scss';
+@import 'components/clientsDetails.scss';
 
 @import './media.scss';
