--- a/public/styles/components/_dayScheduleCard.scss
+++ b/public/styles/components/_dayScheduleCard.scss
@@ -30,10 +30,11 @@
             margin-left: 1.5rem;
         }
 
-        .buttons-container{
+        .buttons-container {
             display: flex;
             flex-direction: column;
-            button{
+
+            button {
                 margin-bottom: 0.2rem;
             }
         }
@@ -42,6 +43,7 @@
             display: flex;
             align-items: center;
         }
+
         .fa-info-circle:hover {
             color: #6CBBC7 !important;
         }
@@ -91,9 +93,36 @@
     }
 }
 
-.dialog-form{
+.dialog-form {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 300px;
+}
+
+.admin-classes-layout {
+    .day-schedule-cards {
+        .class.radio {
+            border-left-style: none
+        }
+
+        .class.wraper .info {
+            border-right-style: solid;
+            border-width: thin;
+            align-items: end;
+            min-width: 70px;
+            padding-right: 1rem;
+
+            p {
+                font-weight: 300;
+                margin-top: 0rem;
+                margin-bottom: 0.5rem;
+            }
+
+            b {
+                font-size: 13px;
+                color: #78999f;
+            }
+        }
+    }
 }
