adds week days and dates to weekSchedule in week_schedule page

--- a/public/styles/base.scss
+++ b/public/styles/base.scss
@@ -25,6 +25,7 @@ ul {
 
 .button-white {
   padding: 0.8rem 1rem;
+  text-align: center;
   background-color: white;
   border-radius: 5px;
   border: solid;
