--- a/public/styles/components/_weekSchedulePage.scss
+++ b/public/styles/components/_weekSchedulePage.scss
@@ -27,3 +27,20 @@
     box-shadow: 0px 3px 4px 0px rgb(0 0 0 / 25%);
     border-radius: 0.5rem;
 }
+
+.week_schedule-form{
+    display: flex;
+    margin: 1rem;
+    align-items: center;
+    background-color: #EDECF4;
+    justify-content: center;
+    padding: 2rem;
+    border-radius: 1rem;
+    flex-wrap: wrap;
+    box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 25%);
+
+    .button-white{
+        margin-left: 2rem;
+        box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 25%);
+    }
+}
