--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -377,6 +377,22 @@ header .navItem {
   border-radius: 0.5rem;
 }
 
+.week_schedule-form {
+  display: flex;
+  margin: 1rem;
+  align-items: center;
+  background-color: #EDECF4;
+  justify-content: center;
+  padding: 2rem;
+  border-radius: 1rem;
+  flex-wrap: wrap;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.week_schedule-form .button-white {
+  margin-left: 2rem;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
 .class-card {
   background: #edecf4;
   height: 320px;
