--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -3,6 +3,7 @@
 
 @import 'components/dayScheduleCard.scss';
 @import 'components/header.scss';
+@import 'components/subscriptions.scss';
 @import 'components/adminLayout.scss';
 @import 'components/adminClassesLayout.scss';
 @import 'components/weekSchedulePage.scss';
