--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -167,6 +167,8 @@ ul {
 }
 
 header {
+  z-index: 3;
+  position: relative;
   /* Set min-height to avoid page reflow while session loading */
 }
 header nav {
@@ -282,6 +284,146 @@ header .navItems {
 header .navItem {
   display: inline-block;
   /*  margin-right: 3.5rem; */
+}
+
+.subscriptions {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 1rem;
+  flex-wrap: wrap;
+}
+.subscriptions .color {
+  width: 100%;
+  height: 450px;
+  background-color: #CAC6EB;
+  z-index: 1;
+  position: absolute;
+  top: 10%;
+}
+.subscriptions .radius {
+  top: 10%;
+  background: linear-gradient(0deg, #F8F7F7 22.16%, rgba(255, 255, 255, 0) 97.61%);
+  position: absolute;
+  z-index: 2;
+  height: 500px;
+  width: 100%;
+}
+
+.subscription-card {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  box-shadow: -1px 0px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 29px;
+  padding: 3rem;
+  width: 400px;
+  margin: 1rem;
+}
+.subscription-card .dlt-button-white {
+  padding: 0.6rem 0.8rem;
+  background-color: white;
+  border-radius: 5px;
+  border: none;
+  color: #646262;
+  position: absolute;
+  top: 0.8rem;
+  left: 0.8rem;
+  border: solid;
+  border-width: thin;
+}
+.subscription-card .dlt-button-white:hover {
+  background-color: #FF5D23;
+  cursor: pointer;
+  color: black;
+}
+.subscription-card i {
+  font-weight: 300;
+}
+.subscription-card h1 {
+  font-size: 1.8rem;
+  font-weight: 300;
+  margin-top: 0rem;
+  text-transform: capitalize;
+  text-align: center;
+}
+.subscription-card hr {
+  width: 100%;
+  margin: 2rem 0rem;
+}
+.subscription-card p {
+  text-align: center;
+}
+.subscription-card .price {
+  font-weight: bold;
+  font-size: 30px;
+}
+.subscription-card .months {
+  color: #C4C4C4;
+}
+.subscription-card img {
+  margin: 1.5rem 0rem;
+  max-height: 170px;
+}
+
+.subscriptions-admin {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.subscriptions-admin h1 {
+  margin-top: 1rem;
+}
+
+.subscription-card.form .button-white.checked {
+  position: absolute;
+  top: 0.8rem;
+  left: 5rem;
+  padding: 0.6rem 0.8rem;
+  color: #646262;
+  background-color: #76E294;
+}
+.subscription-card.form .button-white.checked:hover {
+  position: absolute;
+  top: 0.8rem;
+  left: 5rem;
+  padding: 0.6rem 0.8rem;
+}
+.subscription-card.form .form-body {
+  width: 100%;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.subscription-card.form .form-body hr {
+  width: 100%;
+}
+.subscription-card.form .form-body img {
+  margin-top: 0.5rem;
+  max-width: 190px;
+}
+.subscription-card.form .form-body .free-class {
+  display: flex;
+}
+.subscription-card.form .form-body ul {
+  padding: 0;
+  padding-top: 1rem;
+}
+.subscription-card.form .form-body ul li {
+  list-style: none;
+  margin-top: 0.5rem;
+}
+.subscription-card.form .nr-inputs {
+  display: flex;
+}
+
+.button-white.admin {
+  align-self: baseline;
+  margin-left: 1.5rem;
 }
 
 .admin-layout {
