--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -9,5 +9,6 @@
 @import 'components/weekSchedulePage.scss';
 @import 'components/adminClassCard.scss';
 @import 'components/clientsDetails.scss';
+@import 'components/adminBookingsPage.scss';
 
 @import './media.scss';
