--- a/public/styles/components/_clientsDetails.scss
+++ b/public/styles/components/_clientsDetails.scss
@@ -105,6 +105,7 @@
     background: #EDECF4;
     margin:10px 0;
     border-radius: 20px;
+    box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 25%);
 
     .active-bookings-numbers{
         width:50px;
