--- a/public/styles/components/_dayScheduleCard.scss
+++ b/public/styles/components/_dayScheduleCard.scss
@@ -1,3 +1,15 @@
+.day-schedule-cards.bookings{
+    flex-direction: column;
+    .icon-chevron{
+        margin-left: 1.5rem;
+    }
+    .class.radio {
+        p {
+            margin: 0px;
+        }
+    }
+}
+
 .day-schedule-cards {
     display: flex;
     justify-content: space-evenly;
@@ -74,6 +86,10 @@
     width: fit-content;
     width: 400px;
     margin: 1rem 0rem;
+
+    hr{
+        margin: 2rem 0.5rem;
+    }
 
     img {
         width: 60px;
