--- a/public/styles/components/_subscriptions.scss
+++ b/public/styles/components/_subscriptions.scss
@@ -133,7 +133,7 @@
 
         img {
             margin-top: 0.5rem;
-            max-width: 190px;
+            max-height: 190px;
         }
 
         .free-class {
