--- a/public/styles/components/_weekSchedulePage.scss
+++ b/public/styles/components/_weekSchedulePage.scss
@@ -38,6 +38,7 @@
     border-radius: 1rem;
     flex-wrap: wrap;
     box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 25%);
+    width: 400px;
 
     .button-white{
         margin-left: 2rem;
