--- a/public/styles/components/_clientsDetails.scss
+++ b/public/styles/components/_clientsDetails.scss
@@ -81,14 +81,14 @@
     h3{
         margin:0 0 30px 0;
     }
-    
+/*     
     svg{
         height: 150px;
     }
-
+ */
     rect{
-        height: 150px;
-
+/*         height: 150px;
+ */
         g:first-of-type{
             height: 100px;
         }
