--- a/public/styles/components/_adminBookingsPage.scss
+++ b/public/styles/components/_adminBookingsPage.scss
@@ -3,6 +3,31 @@
     width: 100%;
     justify-content: space-evenly;
     flex-wrap: wrap;
+
+    .active-booking-card{
+        flex-direction: column;
+        height: fit-content;
+        padding: 0.5rem;
+        align-items: baseline;
+    }
+
+    .converage-desc{
+        margin: 0rem;
+        margin-left: 0.5rem;
+        b{
+            color: #5E54AC;
+            font-size: 22px;
+        }
+        i{
+            color: #646263a3;
+        }
+    }
+
+    .wraper{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
     
     .day-schedule-cards .class.wraper {
         width: 400px;
@@ -45,6 +70,14 @@
     .active-booking-card {
         min-width: 400px;
     }
+}
+
+.active-booking-user{
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    width: 100%;
 }
 
 .feedback {
