--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -648,6 +648,32 @@ header .navItem {
   flex-direction: row;
   align-items: center;
 }
+.user-list-items #arrow {
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.classSelected {
+  font-weight: bolder;
+}
+.classSelected #arrow {
+  visibility: hidden;
+  position: relative;
+}
+.classSelected #arrow:after {
+  background: #edecf4;
+  content: ">";
+  visibility: visible;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  border-radius: 50%;
+}
 
 .client-info {
   display: flex;
@@ -661,17 +687,17 @@ header .navItem {
   border-bottom: 1px solid #646262;
   padding: 0;
   /*     
-      svg{
-          height: 150px;
-      }
-   */
+     svg{
+         height: 150px;
+     }
+  */
 }
 .client-chart h3 {
   margin: 0 0 30px 0;
 }
 .client-chart rect {
   /*         height: 150px;
-   */
+  */
 }
 .client-chart rect g:first-of-type {
   height: 100px;
@@ -684,7 +710,7 @@ header .navItem {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  background: #EDECF4;
+  background: #edecf4;
   margin: 10px 0;
   border-radius: 20px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -733,10 +759,18 @@ header .navItem {
   padding: 3px;
   border-radius: 5px;
   border: 1px solid #646263;
-  background: white;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   color: #646262;
+}
+.active-booking-card .active-bookings-status .buttonPresent {
+  background: #33d460;
+}
+.active-booking-card .active-bookings-status .buttonAbsent {
+  background: white;
+}
+.active-booking-card .active-bookings-status #buttonInvisible {
+  visibility: hidden;
 }
 
 .client-last-booking {
