--- a/public/styles/base.scss
+++ b/public/styles/base.scss
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
 
-
 html,
 body {
   color: #646262;
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: #F8F7F7;
+  background-color: #f8f7f7;
 }
 
 a {
@@ -23,11 +22,11 @@ ul {
   margin: 0rem !important;
 }
 
-.bold-text{
+.bold-text {
   font-weight: bolder;
 }
 
-.thin-text{
+.thin-text {
   font-weight: 300;
 }
 
@@ -66,6 +65,6 @@ ul {
   color: #a7d6dd;
 }
 
-.button-green{
-  background-color: #76E294 !important;
+.button-green {
+  background-color: #76e294 !important;
 }
