--- a/public/styles/components/_subscriptions.scss
+++ b/public/styles/components/_subscriptions.scss
@@ -1,163 +1,165 @@
 .subscriptions {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 1rem;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 1rem;
+  flex-wrap: wrap;
 
-    .color {
-        width: 100%;
-        height: 450px;
-        background-color: #CAC6EB;
-        z-index: 1;
-        position: absolute;
-        top: 10%;
-    }
+  .color {
+    width: 100%;
+    height: 450px;
+    background-color: #cac6eb;
+    z-index: 1;
+    position: absolute;
+    top: 10%;
+  }
 
-    .radius {
-        top: 10%;
-        background: linear-gradient(0deg, #F8F7F7 22.16%, rgba(255, 255, 255, 0) 97.61%);
-        position: absolute;
-        z-index: 2;
-        height: 500px;
-        width: 100%;
-    }
+  .radius {
+    top: 10%;
+    background: linear-gradient(
+      0deg,
+      #f8f7f7 22.16%,
+      rgba(255, 255, 255, 0) 97.61%
+    );
+    position: absolute;
+    z-index: 2;
+    height: 500px;
+    width: 100%;
+  }
 }
 
 .subscription-card {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  box-shadow: -1px 0px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 29px;
+  padding: 3rem;
+  width: 400px;
+  margin: 1rem;
 
-    position: relative;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .dlt-button-white {
+    padding: 0.6rem 0.8rem;
     background-color: white;
-    box-shadow: -1px 0px 5px rgba(0, 0, 0, 0.25);
-    border-radius: 29px;
-    padding: 3rem;
-    width: 400px;
-    margin: 1rem;
+    border-radius: 5px;
+    border: none;
+    color: $darkGreyWriting;
+    position: absolute;
+    top: 0.8rem;
+    left: 0.8rem;
+    border: solid;
+    border-width: thin;
+  }
 
-    .dlt-button-white {
-        padding: 0.6rem 0.8rem;
-        background-color: white;
-        border-radius: 5px;
-        border: none;
-        color: $darkGreyWriting;
-        position: absolute;
-        top: 0.8rem;
-        left: 0.8rem;
-        border: solid;
-        border-width: thin;
-    }
+  .dlt-button-white:hover {
+    background-color: #ff5d23;
+    cursor: pointer;
+    color: black;
+  }
 
-    .dlt-button-white:hover {
-        background-color: #FF5D23;
-        cursor: pointer;
-        color: black;
-    }
+  i {
+    font-weight: 300;
+  }
 
-    i {
-        font-weight: 300;
-    }
+  h1 {
+    font-size: 1.8rem;
+    font-weight: 300;
+    margin-top: 0rem;
+    text-transform: capitalize;
+    text-align: center;
+  }
 
-    h1 {
-        font-size: 1.8rem;
-        font-weight: 300;
-        margin-top: 0rem;
-        text-transform: capitalize;
-        text-align: center;
-    }
+  hr {
+    width: 100%;
+    margin: 2rem 0rem;
+  }
 
-    hr {
-        width: 100%;
-        margin: 2rem 0rem;
-    }
+  p {
+    text-align: center;
+  }
 
-    p {
-        text-align: center;
-    }
+  .price {
+    font-weight: bold;
+    font-size: 30px;
+  }
 
-    .price {
-        font-weight: bold;
-        font-size: 30px;
-    }
+  .months {
+    color: #c4c4c4;
+  }
 
-    .months {
-        color: #C4C4C4;
-    }
-
-    img {
-        margin: 1.5rem 0rem;
-        max-height: 170px;
-    }
+  img {
+    margin: 1.5rem 0rem;
+    max-height: 170px;
+  }
 }
 
 .subscriptions-admin {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
-    h1 {
-        margin-top: 1rem;
-    }
+  h1 {
+    margin-top: 1rem;
+  }
 }
 
 .subscription-card.form {
-    .button-white.checked {
-        position: absolute;
-        top: 0.8rem;
-        left: 5rem;
-        padding: 0.6rem 0.8rem;
-        color: $darkGreyWriting;
-        background-color: #76E294;
+  .button-white.checked {
+    position: absolute;
+    top: 0.8rem;
+    left: 5rem;
+    padding: 0.6rem 0.8rem;
+    color: $darkGreyWriting;
+    background-color: #76e294;
+  }
+
+  .button-white.checked:hover {
+    position: absolute;
+    top: 0.8rem;
+    left: 5rem;
+    padding: 0.6rem 0.8rem;
+  }
+
+  .form-body {
+    width: 100%;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    hr {
+      width: 100%;
     }
 
-    .button-white.checked:hover {
-        position: absolute;
-        top: 0.8rem;
-        left: 5rem;
-        padding: 0.6rem 0.8rem;
+    img {
+      margin-top: 0.5rem;
+      max-height: 190px;
     }
 
-    .form-body {
-        width: 100%;
-        margin-top: 2rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        hr {
-            width: 100%;
-        }
-
-        img {
-            margin-top: 0.5rem;
-            max-height: 190px;
-        }
-
-        .free-class {
-            display: flex;
-        }
-
-        ul {
-            li {
-                list-style: none;
-                margin-top: 0.5rem;
-            }
-
-            padding: 0;
-            padding-top: 1rem;
-        }
+    .free-class {
+      display: flex;
     }
 
-    .nr-inputs {
-        display: flex;
+    ul {
+      li {
+        list-style: none;
+        margin-top: 0.5rem;
+      }
+
+      padding: 0;
+      padding-top: 1rem;
     }
+  }
+
+  .nr-inputs {
+    display: flex;
+  }
 }
 
 .button-white.admin {
-    align-self: baseline;
-    margin-left: 1.5rem;
-
+  align-self: baseline;
+  margin-left: 1.5rem;
 }
