--- a/public/styles/components/_clientsDetails.scss
+++ b/public/styles/components/_clientsDetails.scss
@@ -81,6 +81,7 @@
     visibility: hidden;
     position: relative;
   }
+
   #arrow:after {
     background: $grayBackground;
     content: '>';
@@ -111,12 +112,14 @@
   h3 {
     margin: 0 0 30px 0;
   }
+
   /*     
     svg{
         height: 150px;
     }
  */
   rect {
+
     /*         height: 150px;
  */
     g:first-of-type {
@@ -127,15 +130,39 @@
 
 .active-booking-card {
   width: 100%;
-  height: 136px;
+  min-height: 136px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   background: #edecf4;
   margin: 10px 0;
   border-radius: 20px;
   box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 25%);
+  padding: 0.7rem;
+  .class-coverage p{
+    margin:0px;
+    margin-left: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .converage-desc{
+    margin: 0rem;
+    margin-left: 0.5rem;
+    b{
+        color: #5E54AC;
+        font-size: 22px;
+    }
+    i{
+        color: #646263a3;
+    }
+}
+  .wraper {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 20px;
+  }
 
   .active-bookings-numbers {
     width: 50px;
