--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -719,15 +719,39 @@ header .navItem {
 
 .active-booking-card {
   width: 100%;
-  height: 136px;
+  min-height: 136px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   background: #edecf4;
   margin: 10px 0;
   border-radius: 20px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  padding: 0.7rem;
+}
+.active-booking-card .class-coverage p {
+  margin: 0px;
+  margin-left: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.active-booking-card .converage-desc {
+  margin: 0rem;
+  margin-left: 0.5rem;
+}
+.active-booking-card .converage-desc b {
+  color: #5E54AC;
+  font-size: 22px;
+}
+.active-booking-card .converage-desc i {
+  color: #646263a3;
+}
+.active-booking-card .wraper {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 20px;
 }
 .active-booking-card .active-bookings-numbers {
   width: 50px;
@@ -826,22 +850,14 @@ header .navItem {
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
+.admin-bookings .active-booking-card .wraper {
+  padding: 0rem;
+}
 .admin-bookings .active-booking-card {
   flex-direction: column;
   height: fit-content;
   padding: 0.5rem;
   align-items: baseline;
-}
-.admin-bookings .converage-desc {
-  margin: 0rem;
-  margin-left: 0.5rem;
-}
-.admin-bookings .converage-desc b {
-  color: #5E54AC;
-  font-size: 22px;
-}
-.admin-bookings .converage-desc i {
-  color: #646263a3;
 }
 .admin-bookings .wraper {
   display: flex;
